# Agent

./: .env.example  pyproject.toml
src/agent/: main.py
src/agent/agents/research/: agent.py  graph.py  schemas.py  state.py
src/agent/api/: chat.py  health.py
src/agent/core/: config.py
src/agent/schemas/: api.py  events.py
src/agent/services/: llm.py
